# test-debug-2

./: .coverage  .gitignore  API_COMPARISON.md  README.md  TASKS.md  publish.sh  pyproject.toml  requirements.md  test_formatters.py
docs/: INSTALL.md
logs/: iteration-1.md  iteration-10.md  iteration-11.md  iteration-12.md  iteration-13.md  iteration-14.md  iteration-15.md  iteration-16.md  iteration-17.md  iteration-18.md  iteration-19.md  iteration-2.md  iteration-20.md  iteration-21.md  iteration-22.md  iteration-23.md  iteration-24.md  iteration-25.md  iteration-26.md  iteration-27.md  iteration-28.md  iteration-3.md  iteration-4.md  iteration-5.md  iteration-6.md  iteration-7.md  iteration-8.md  iteration-9.md
src/weather_cli/: cache.py  config.py  exceptions.py  models.py  validation.py  weather.py
src/weather_cli/api/: __init__.py  client.py
src/weather_cli/display/: __init__.py  format.py
tests/: test_api.py  test_cache.py  test_cli.py  test_integration.py
